src/objects/Training_Attendee__c.object
<CustomObject>
    <description>People attending a training class</description>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account contact record for attendee</description>
        <label>Account Contact</label>
        <referenceTo>Account_Contact__c</referenceTo>
        <relationshipLabel>Training Attendees</relationshipLabel>
        <relationshipName>Training_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Training attendee is attending for</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Attendees</relationshipLabel>
        <relationshipName>Training_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email for Attendee</description>
        <formula>Account_Contact__r.Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of attendee.</description>
        <formula>Account_Contact__r.Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of attendee</description>
        <formula>Account_Contact__r.Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Attenedees status for training class</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training class attendee will attend</description>
        <label>Training Class</label>
        <referenceTo>Training_Class__c</referenceTo>
        <relationshipLabel>Training Attendees</relationshipLabel>
        <relationshipName>Training_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{000000000}</displayFormat>
        <label>Training Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>